fixed overflow issue with big_nav navigation bar

--- a/css/main.sass
+++ b/css/main.sass
@@ -59,7 +59,6 @@ body
 	width: 100%
 	height: 100px
 	background: $testcolor
-	overflow: hidden
 	-webkit-transition: 0.4s
 	-moz-transition: 0.4s
 	transition: 0.4s
@@ -247,8 +246,7 @@ body
 
 .hero-main
 	position: relative
-	margin: 4em 0
-	padding: 4em 10%
+	padding: 10em 0 2em 0
 	background: $wireframefg
 	color: $wireframebg
 	h1
